<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="11dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/UserInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_vertical|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center"
                android:text="@string/EMPLOYEEID_LABEL"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EmployeeId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/EMPLOYEE_CODE_HIT"
                android:inputType="text"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="viewStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CUSTOMER_INFO_TITLE"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/PhotoLayout"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/BPhoto"
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/CUSTOMER_PHOTO_DESC"
                android:visibility="visible"
                app:srcCompat="@android:drawable/checkbox_on_background" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="middle">

            <TableRow
                android:id="@+id/THNameRow"
                android:layout_width="match_parent"
                android:layout_height="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/THName_LABEL"
                    android:textAlignment="viewStart"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="77dp"
                    tools:layout_editor_absoluteY="115dp" />

                <TextView
                    android:id="@+id/THName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:textAlignment="viewStart" />

            </TableRow>

            <TableRow
                android:id="@+id/ENNameRow"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ENName_LABEL"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/ENName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:textAlignment="viewStart" />

            </TableRow>

            <TableRow
                android:id="@+id/GenderROW"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/GENER_LABEL"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/TGender"
                    android:layout_width="77dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:textAlignment="viewStart" />
            </TableRow>

            <TableRow
                android:id="@+id/BDateRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/BDATE_LABEL"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/TBirthDate"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textAlignment="viewStart"
                    android:visibility="visible"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="77dp"
                    tools:layout_editor_absoluteY="115dp" />
            </TableRow>

            <TableRow
                android:id="@+id/IdentRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/IDENT_LABEL"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/TIdentNo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:textAlignment="viewStart"
                    android:visibility="visible"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="77dp"
                    tools:layout_editor_absoluteY="115dp" />

            </TableRow>

            <TableRow
                android:id="@+id/AddressRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ADRESS_LABEL"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/TAdress"
                    android:layout_width="69dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textAlignment="viewStart" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/TCreatLeadLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/BCreateLead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/B_CREATE_LEAD_LABEL"
                android:visibility="visible"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="301dp" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>